tests/rosetta/out/Java/add-a-variable-to-a-class-instance-at-runtime.error
javac: exit status 1
/tmp/AddAVariableToAClassInstanceAtRuntime.java:27: error: cannot find symbol
            String name = scanner.nextLine();
                          ^
  symbol:   variable scanner
  location: class AddAVariableToAClassInstanceAtRuntime
/tmp/AddAVariableToAClassInstanceAtRuntime.java:29: error: cannot find symbol
            String value = scanner.nextLine();
                           ^
  symbol:   variable scanner
  location: class AddAVariableToAClassInstanceAtRuntime
/tmp/AddAVariableToAClassInstanceAtRuntime.java:38: error: cannot find symbol
            String name = scanner.nextLine();
                          ^
  symbol:   variable scanner
  location: class AddAVariableToAClassInstanceAtRuntime
/tmp/AddAVariableToAClassInstanceAtRuntime.java:40: error: incompatible types: String cannot be converted to Map<String,String>
                Map<String,String> value = ss.runtimeFields.get(name);
                                                               ^
4 errors
